created function for tokens

--- a/Logistic Regression- Sentiment analysis/Sentiment_notebook.ipynb
+++ b/Logistic Regression- Sentiment analysis/Sentiment_notebook.ipynb
@@ -630,7 +630,9 @@
         "colab": {}
       },
       "source": [
-        ""
+        "from nltk.stem.porter import PorterStemmer\n",
+        "\n",
+        "porter = PorterStemmer()"
       ],
       "execution_count": 0,
       "outputs": []
@@ -643,7 +645,8 @@
         "colab": {}
       },
       "source": [
-        ""
+        "def tokenizer(text):\n",
+        "  return text.split()"
       ],
       "execution_count": 0,
       "outputs": []
@@ -656,7 +659,8 @@
         "colab": {}
       },
       "source": [
-        ""
+        "def tokenizer_porter(text):\n",
+        "  return [porter.stem(word) for word in text.split()]"
       ],
       "execution_count": 0,
       "outputs": []
@@ -665,6 +669,36 @@
       "cell_type": "code",
       "metadata": {
         "id": "6yZ9HSYbKNzD",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "94c65d52-4237-44a8-8201-a86417225d67"
+      },
+      "source": [
+        "tokenizer_porter('you going i go fuk you')"
+      ],
+      "execution_count": 28,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "['you', 'go', 'i', 'go', 'fuk', 'you']"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 28
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "qRTmTkwSN1sf",
         "colab_type": "code",
         "colab": {}
       },
@@ -679,32 +713,72 @@
       "metadata": {
         "id": "0nTm5hFuKNzI",
         "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 68
+        },
+        "outputId": "dac7e2e3-d4b0-45dd-a9c9-700c3f421eca"
       },
       "source": [
-        ""
+        "import nltk\n",
+        "nltk.download('stopwords')"
       ],
-      "execution_count": 0,
-      "outputs": []
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "LQ9trSmpKNzM",
-        "colab_type": "text"
-      },
-      "source": [
-        " "
+      "execution_count": 29,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "[nltk_data] Downloading package stopwords to /root/nltk_data...\n",
+            "[nltk_data]   Unzipping corpora/stopwords.zip.\n"
+          ],
+          "name": "stdout"
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "True"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 29
+        }
       ]
     },
     {
-      "cell_type": "markdown",
+      "cell_type": "code",
       "metadata": {
-        "id": "U6l-Jpt9KNzN",
-        "colab_type": "text"
+        "id": "npWqqb1BOXmV",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "e3919da5-fe47-44e2-a5ee-795559f94812"
       },
       "source": [
-        " "
+        "from nltk.corpus import stopwords\n",
+        "\n",
+        "stop = stopwords.words('english')\n",
+        "\n",
+        "[w for w in tokenizer_porter('a you going for a walk get out')[-10:] if w not in stop]"
+      ],
+      "execution_count": 30,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "['go', 'walk', 'get']"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 30
+        }
       ]
     },
     {
