--- a/Logistic Regression- Sentiment analysis/Sentiment_notebook.ipynb
+++ b/Logistic Regression- Sentiment analysis/Sentiment_notebook.ipynb
@@ -117,9 +117,49 @@
     {
       "cell_type": "code",
       "metadata": {
+        "id": "bZu1QeMywghr",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 309
+        },
+        "outputId": "91973cbe-7601-499e-f17b-9f672f890ae7"
+      },
+      "source": [
+        "!wget \"https://github.com/Tangent007/ML-Projects/raw/master/Logistic%20Regression-%20Sentiment%20analysis/movie_data.csv\""
+      ],
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "--2020-04-15 17:05:41--  https://github.com/Tangent007/ML-Projects/raw/master/Logistic%20Regression-%20Sentiment%20analysis/movie_data.csv\n",
+            "Resolving github.com (github.com)... 140.82.113.4\n",
+            "Connecting to github.com (github.com)|140.82.113.4|:443... connected.\n",
+            "HTTP request sent, awaiting response... 302 Found\n",
+            "Location: https://media.githubusercontent.com/media/Tangent007/ML-Projects/master/Logistic%20Regression-%20Sentiment%20analysis/movie_data.csv [following]\n",
+            "--2020-04-15 17:05:41--  https://media.githubusercontent.com/media/Tangent007/ML-Projects/master/Logistic%20Regression-%20Sentiment%20analysis/movie_data.csv\n",
+            "Resolving media.githubusercontent.com (media.githubusercontent.com)... 151.101.0.133, 151.101.64.133, 151.101.128.133, ...\n",
+            "Connecting to media.githubusercontent.com (media.githubusercontent.com)|151.101.0.133|:443... connected.\n",
+            "HTTP request sent, awaiting response... 200 OK\n",
+            "Length: 65862309 (63M) [text/plain]\n",
+            "Saving to: ‘movie_data.csv.1’\n",
+            "\n",
+            "movie_data.csv.1    100%[===================>]  62.81M   161MB/s    in 0.4s    \n",
+            "\n",
+            "2020-04-15 17:05:43 (161 MB/s) - ‘movie_data.csv.1’ saved [65862309/65862309]\n",
+            "\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
         "id": "mFQ5zpsYKNxa",
         "colab_type": "code",
-        "outputId": "f5386bc1-63a3-4deb-852d-1964faaa370b",
+        "outputId": "738d0bd4-af76-47da-fa31-82e9b80d229e",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 359
@@ -131,7 +171,7 @@
         "df=pd.read_csv(\"movie_data.csv\")\n",
         "df.head(10)"
       ],
-      "execution_count": 2,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -231,7 +271,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 2
+          "execution_count": 5
         }
       ]
     },
@@ -249,7 +289,7 @@
       "source": [
         "df['review'][0]"
       ],
-      "execution_count": 3,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -324,16 +364,16 @@
       "metadata": {
         "id": "4VzOUMBAKNxw",
         "colab_type": "code",
+        "outputId": "8fe88f98-99eb-45ba-8aec-1e712c7d9b74",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "8fe88f98-99eb-45ba-8aec-1e712c7d9b74"
+        }
       },
       "source": [
         "print(count.vocabulary_)"
       ],
-      "execution_count": 5,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -349,16 +389,16 @@
       "metadata": {
         "id": "DTBLcWpYKNx1",
         "colab_type": "code",
+        "outputId": "26da123f-046c-47c9-8e48-282213b0a817",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 68
-        },
-        "outputId": "26da123f-046c-47c9-8e48-282213b0a817"
+        }
       },
       "source": [
         "print(bag.toarray())"
       ],
-      "execution_count": 7,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -426,11 +466,11 @@
       "metadata": {
         "id": "-1ebW6scKNyN",
         "colab_type": "code",
+        "outputId": "d7dedd21-baf4-43ca-d2d9-1b2668aa67af",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 68
-        },
-        "outputId": "d7dedd21-baf4-43ca-d2d9-1b2668aa67af"
+        }
       },
       "source": [
         "from sklearn.feature_extraction.text import TfidfTransformer\n",
@@ -439,7 +479,7 @@
         "\n",
         "print(tfidf.fit_transform(bag).toarray())"
       ],
-      "execution_count": 15,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -495,16 +535,16 @@
       "metadata": {
         "id": "rlNU6nx2KNyY",
         "colab_type": "code",
+        "outputId": "558899c1-b06b-41fe-bc03-ebb2a0b3a11e",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "558899c1-b06b-41fe-bc03-ebb2a0b3a11e"
+        }
       },
       "source": [
         "df.loc[0,'review'][-50:]"
       ],
-      "execution_count": 16,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -544,16 +584,16 @@
       "metadata": {
         "id": "U9f7kKKHKNym",
         "colab_type": "code",
+        "outputId": "bcc59863-73e0-44bf-bae0-09eaa29ba759",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "bcc59863-73e0-44bf-bae0-09eaa29ba759"
+        }
       },
       "source": [
         "preprocessor(df.loc[0,'review'][-50:])"
       ],
-      "execution_count": 18,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -574,16 +614,16 @@
       "metadata": {
         "id": "ZHLEBFJPKNyq",
         "colab_type": "code",
+        "outputId": "7fc9e131-a3a3-4d1c-cac2-5b2c3e9cb65b",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "7fc9e131-a3a3-4d1c-cac2-5b2c3e9cb65b"
+        }
       },
       "source": [
         "preprocessor('<b>')"
       ],
-      "execution_count": 19,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -670,16 +710,16 @@
       "metadata": {
         "id": "6yZ9HSYbKNzD",
         "colab_type": "code",
+        "outputId": "94c65d52-4237-44a8-8201-a86417225d67",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "94c65d52-4237-44a8-8201-a86417225d67"
+        }
       },
       "source": [
         "tokenizer_porter('you going i go fuk you')"
       ],
-      "execution_count": 28,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -700,30 +740,47 @@
       "metadata": {
         "id": "qRTmTkwSN1sf",
         "colab_type": "code",
-        "colab": {}
+        "outputId": "23ee018f-c821-46f0-b506-89b6c1018bfc",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        }
       },
       "source": [
-        ""
+        "tokenizer('you going i go fuk you')"
       ],
       "execution_count": 0,
-      "outputs": []
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "['you', 'going', 'i', 'go', 'fuk', 'you']"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 31
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "0nTm5hFuKNzI",
         "colab_type": "code",
+        "outputId": "4a47b962-c0c9-48ed-9d2f-552c402b6c2c",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 68
-        },
-        "outputId": "dac7e2e3-d4b0-45dd-a9c9-700c3f421eca"
+        }
       },
       "source": [
         "import nltk\n",
         "nltk.download('stopwords')"
       ],
-      "execution_count": 29,
+      "execution_count": 13,
       "outputs": [
         {
           "output_type": "stream",
@@ -743,7 +800,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 29
+          "execution_count": 13
         }
       ]
     },
@@ -752,11 +809,11 @@
       "metadata": {
         "id": "npWqqb1BOXmV",
         "colab_type": "code",
+        "outputId": "e3919da5-fe47-44e2-a5ee-795559f94812",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "e3919da5-fe47-44e2-a5ee-795559f94812"
+        }
       },
       "source": [
         "from nltk.corpus import stopwords\n",
@@ -765,7 +822,7 @@
         "\n",
         "[w for w in tokenizer_porter('a you going for a walk get out')[-10:] if w not in stop]"
       ],
-      "execution_count": 30,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -799,7 +856,18 @@
         "colab": {}
       },
       "source": [
-        ""
+        "from sklearn.feature_extraction.text import TfidfVectorizer\n",
+        "\n",
+        "tfidf = TfidfVectorizer(strip_accents=None,\n",
+        "                        lowercase=False,\n",
+        "                        preprocessor=None,\n",
+        "                        tokenizer=tokenizer_porter,\n",
+        "                        use_idf=True,\n",
+        "                        norm='l2',\n",
+        "                        smooth_idf=True)\n",
+        "\n",
+        "y= df.sentiment.values\n",
+        "x= tfidf.fit_transform(df.review)"
       ],
       "execution_count": 0,
       "outputs": []
@@ -809,13 +877,31 @@
       "metadata": {
         "id": "-8bCaTrZKNzU",
         "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 51
+        },
+        "outputId": "ca8ce24d-fa42-463c-aa86-63add93393b9"
       },
       "source": [
-        ""
+        "x"
       ],
-      "execution_count": 0,
-      "outputs": []
+      "execution_count": 15,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "<50000x73814 sparse matrix of type '<class 'numpy.float64'>'\n",
+              "\twith 6785262 stored elements in Compressed Sparse Row format>"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 15
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -835,7 +921,9 @@
         "colab": {}
       },
       "source": [
-        ""
+        "from sklearn.model_selection import train_test_split\n",
+        "\n",
+        "x_train,x_test,y_train,y_test=train_test_split(x,y,test_size=0.5,random_state=1,shuffle=False)"
       ],
       "execution_count": 0,
       "outputs": []
