accuracy calculated and model saved

--- a/Logistic Regression- Sentiment analysis/Sentiment_notebook.ipynb
+++ b/Logistic Regression- Sentiment analysis/Sentiment_notebook.ipynb
@@ -22,6 +22,7 @@
     "colab": {
       "name": "Sentiment_notebook.ipynb",
       "provenance": [],
+      "collapsed_sections": [],
       "toc_visible": true,
       "include_colab_link": true
     }
@@ -119,11 +120,11 @@
       "metadata": {
         "id": "bZu1QeMywghr",
         "colab_type": "code",
+        "outputId": "0e3c3874-b7c3-4512-c358-43e28ca2eb31",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 309
-        },
-        "outputId": "91973cbe-7601-499e-f17b-9f672f890ae7"
+        }
       },
       "source": [
         "!wget \"https://github.com/Tangent007/ML-Projects/raw/master/Logistic%20Regression-%20Sentiment%20analysis/movie_data.csv\""
@@ -133,21 +134,21 @@
         {
           "output_type": "stream",
           "text": [
-            "--2020-04-15 17:05:41--  https://github.com/Tangent007/ML-Projects/raw/master/Logistic%20Regression-%20Sentiment%20analysis/movie_data.csv\n",
+            "--2020-04-16 14:12:16--  https://github.com/Tangent007/ML-Projects/raw/master/Logistic%20Regression-%20Sentiment%20analysis/movie_data.csv\n",
             "Resolving github.com (github.com)... 140.82.113.4\n",
             "Connecting to github.com (github.com)|140.82.113.4|:443... connected.\n",
             "HTTP request sent, awaiting response... 302 Found\n",
             "Location: https://media.githubusercontent.com/media/Tangent007/ML-Projects/master/Logistic%20Regression-%20Sentiment%20analysis/movie_data.csv [following]\n",
-            "--2020-04-15 17:05:41--  https://media.githubusercontent.com/media/Tangent007/ML-Projects/master/Logistic%20Regression-%20Sentiment%20analysis/movie_data.csv\n",
+            "--2020-04-16 14:12:16--  https://media.githubusercontent.com/media/Tangent007/ML-Projects/master/Logistic%20Regression-%20Sentiment%20analysis/movie_data.csv\n",
             "Resolving media.githubusercontent.com (media.githubusercontent.com)... 151.101.0.133, 151.101.64.133, 151.101.128.133, ...\n",
             "Connecting to media.githubusercontent.com (media.githubusercontent.com)|151.101.0.133|:443... connected.\n",
             "HTTP request sent, awaiting response... 200 OK\n",
             "Length: 65862309 (63M) [text/plain]\n",
-            "Saving to: ‘movie_data.csv.1’\n",
+            "Saving to: ‘movie_data.csv’\n",
             "\n",
-            "movie_data.csv.1    100%[===================>]  62.81M   161MB/s    in 0.4s    \n",
+            "movie_data.csv      100%[===================>]  62.81M   202MB/s    in 0.3s    \n",
             "\n",
-            "2020-04-15 17:05:43 (161 MB/s) - ‘movie_data.csv.1’ saved [65862309/65862309]\n",
+            "2020-04-16 14:12:18 (202 MB/s) - ‘movie_data.csv’ saved [65862309/65862309]\n",
             "\n"
           ],
           "name": "stdout"
@@ -159,7 +160,7 @@
       "metadata": {
         "id": "mFQ5zpsYKNxa",
         "colab_type": "code",
-        "outputId": "738d0bd4-af76-47da-fa31-82e9b80d229e",
+        "outputId": "9a6c7cd5-be36-485c-8d9e-25db18856790",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 359
@@ -171,7 +172,7 @@
         "df=pd.read_csv(\"movie_data.csv\")\n",
         "df.head(10)"
       ],
-      "execution_count": 5,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -271,7 +272,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 5
+          "execution_count": 4
         }
       ]
     },
@@ -280,7 +281,7 @@
       "metadata": {
         "id": "qEYMthatKNxj",
         "colab_type": "code",
-        "outputId": "f6d9214d-e034-416a-fd9f-7e40c1914c61",
+        "outputId": "17c703ac-5f76-4e72-cdf2-fd32583f8daf",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 54
@@ -289,7 +290,7 @@
       "source": [
         "df['review'][0]"
       ],
-      "execution_count": 0,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -301,7 +302,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 3
+          "execution_count": 5
         }
       ]
     },
@@ -364,7 +365,7 @@
       "metadata": {
         "id": "4VzOUMBAKNxw",
         "colab_type": "code",
-        "outputId": "8fe88f98-99eb-45ba-8aec-1e712c7d9b74",
+        "outputId": "84d3fe47-7666-4e86-d9ae-7498d07a3766",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
@@ -373,7 +374,7 @@
       "source": [
         "print(count.vocabulary_)"
       ],
-      "execution_count": 0,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "stream",
@@ -389,7 +390,7 @@
       "metadata": {
         "id": "DTBLcWpYKNx1",
         "colab_type": "code",
-        "outputId": "26da123f-046c-47c9-8e48-282213b0a817",
+        "outputId": "0c5062b9-1c7e-4279-aa1a-92bc99c37a03",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 68
@@ -398,7 +399,7 @@
       "source": [
         "print(bag.toarray())"
       ],
-      "execution_count": 0,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "stream",
@@ -466,7 +467,7 @@
       "metadata": {
         "id": "-1ebW6scKNyN",
         "colab_type": "code",
-        "outputId": "d7dedd21-baf4-43ca-d2d9-1b2668aa67af",
+        "outputId": "737656d8-5b4c-4486-c9ed-2811f446728e",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 68
@@ -479,7 +480,7 @@
         "\n",
         "print(tfidf.fit_transform(bag).toarray())"
       ],
-      "execution_count": 0,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "stream",
@@ -584,7 +585,7 @@
       "metadata": {
         "id": "U9f7kKKHKNym",
         "colab_type": "code",
-        "outputId": "bcc59863-73e0-44bf-bae0-09eaa29ba759",
+        "outputId": "c094ba75-0491-4185-e752-537ee420ffa1",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
@@ -593,7 +594,7 @@
       "source": [
         "preprocessor(df.loc[0,'review'][-50:])"
       ],
-      "execution_count": 0,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -605,7 +606,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 18
+          "execution_count": 11
         }
       ]
     },
@@ -614,7 +615,7 @@
       "metadata": {
         "id": "ZHLEBFJPKNyq",
         "colab_type": "code",
-        "outputId": "7fc9e131-a3a3-4d1c-cac2-5b2c3e9cb65b",
+        "outputId": "090b1c12-e3b2-49ae-fa7c-44ce90e13fa5",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
@@ -623,7 +624,7 @@
       "source": [
         "preprocessor('<b>')"
       ],
-      "execution_count": 0,
+      "execution_count": 12,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -635,7 +636,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 19
+          "execution_count": 12
         }
       ]
     },
@@ -710,7 +711,7 @@
       "metadata": {
         "id": "6yZ9HSYbKNzD",
         "colab_type": "code",
-        "outputId": "94c65d52-4237-44a8-8201-a86417225d67",
+        "outputId": "cc03dcff-c508-4218-c2a7-7bacf992fbc2",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
@@ -719,7 +720,7 @@
       "source": [
         "tokenizer_porter('you going i go fuk you')"
       ],
-      "execution_count": 0,
+      "execution_count": 17,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -731,7 +732,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 28
+          "execution_count": 17
         }
       ]
     },
@@ -740,7 +741,7 @@
       "metadata": {
         "id": "qRTmTkwSN1sf",
         "colab_type": "code",
-        "outputId": "23ee018f-c821-46f0-b506-89b6c1018bfc",
+        "outputId": "e5a2498d-8963-45d0-b2e4-0344958388c6",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
@@ -749,7 +750,7 @@
       "source": [
         "tokenizer('you going i go fuk you')"
       ],
-      "execution_count": 0,
+      "execution_count": 18,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -761,7 +762,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 31
+          "execution_count": 18
         }
       ]
     },
@@ -770,7 +771,7 @@
       "metadata": {
         "id": "0nTm5hFuKNzI",
         "colab_type": "code",
-        "outputId": "4a47b962-c0c9-48ed-9d2f-552c402b6c2c",
+        "outputId": "130cdcfa-3ef1-4917-e03f-26ca5d72d83a",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 68
@@ -780,7 +781,7 @@
         "import nltk\n",
         "nltk.download('stopwords')"
       ],
-      "execution_count": 13,
+      "execution_count": 19,
       "outputs": [
         {
           "output_type": "stream",
@@ -800,7 +801,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 13
+          "execution_count": 19
         }
       ]
     },
@@ -809,7 +810,7 @@
       "metadata": {
         "id": "npWqqb1BOXmV",
         "colab_type": "code",
-        "outputId": "e3919da5-fe47-44e2-a5ee-795559f94812",
+        "outputId": "43e4ab7f-c519-45e2-fdd0-a55b7143b79b",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
@@ -822,7 +823,7 @@
         "\n",
         "[w for w in tokenizer_porter('a you going for a walk get out')[-10:] if w not in stop]"
       ],
-      "execution_count": 0,
+      "execution_count": 20,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -834,7 +835,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 30
+          "execution_count": 20
         }
       ]
     },
@@ -877,16 +878,16 @@
       "metadata": {
         "id": "-8bCaTrZKNzU",
         "colab_type": "code",
+        "outputId": "4be7256e-95ac-4167-9388-05173a931223",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 51
-        },
-        "outputId": "ca8ce24d-fa42-463c-aa86-63add93393b9"
+        }
       },
       "source": [
         "x"
       ],
-      "execution_count": 15,
+      "execution_count": 44,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -899,7 +900,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 15
+          "execution_count": 44
         }
       ]
     },
@@ -933,13 +934,38 @@
       "metadata": {
         "id": "YNsTm6mvKNzh",
         "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 51
+        },
+        "outputId": "db24a41e-1973-445e-b5f5-a13a3f3af1cd"
       },
       "source": [
-        ""
+        "import pickle\n",
+        "from sklearn.linear_model import LogisticRegressionCV\n",
+        "\n",
+        "clf= LogisticRegressionCV(cv=5,\n",
+        "                          scoring=\"accuracy\",\n",
+        "                          random_state=0,\n",
+        "                          n_jobs=-1,\n",
+        "                          verbose=3,\n",
+        "                          max_iter=300).fit(x_train,y_train)\n",
+        "\n",
+        "saved_model= open('saved_model.sav','wb')\n",
+        "pickle.dump(clf,saved_model)\n",
+        "saved_model.close()"
       ],
-      "execution_count": 0,
-      "outputs": []
+      "execution_count": 25,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "[Parallel(n_jobs=-1)]: Using backend LokyBackend with 2 concurrent workers.\n",
+            "[Parallel(n_jobs=-1)]: Done   5 out of   5 | elapsed:  2.4min finished\n"
+          ],
+          "name": "stderr"
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -959,7 +985,8 @@
         "colab": {}
       },
       "source": [
-        ""
+        "filename= 'saved_model.sav'\n",
+        "saved_clf=pickle.load(open(filename,'rb'))"
       ],
       "execution_count": 0,
       "outputs": []
@@ -969,26 +996,30 @@
       "metadata": {
         "id": "DVTUWs8lKNzs",
         "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "6f2d5480-36b7-4239-d8fa-37fa00cfa420"
       },
       "source": [
-        ""
+        "saved_clf.score(x_test, y_test)"
       ],
-      "execution_count": 0,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "WQZkPL-wKNzw",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        ""
-      ],
-      "execution_count": 0,
-      "outputs": []
+      "execution_count": 27,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "0.89608"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 27
+        }
+      ]
     }
   ]
 }
